Updated Notebook for NLS experiment 1,2

--- a/Examples/Parareal/ERK/dat/nls-exp12-plots.ipynb
+++ b/Examples/Parareal/ERK/dat/nls-exp12-plots.ipynb
@@ -18,20 +18,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "experiment_number = 2 # 1 or 2\n",
     "pStr = lambda p : \"{:04.0f}\".format(p)\n",
     "\n",
     "# File Paths (Parareal Solution)\n",
-    "PpDir = lambda k , pTot, p : f\"nls-exp1/parareal-k-{k}P{pStr(pTot)}/Proc_{pStr(p)}\"\n",
+    "PpDir = lambda k , pTot, p : f\"nls-exp{experiment_number}/parareal-k-{k}-P{pStr(pTot)}/Proc_{pStr(p)}\"\n",
     "ParSolFile = lambda k, pTot, p : f\"{PpDir(k, pTot, p)}/yend.npy\" \n",
     "ParTimingFile = lambda k, pTot, p : f\"{PpDir(k, pTot, p)}/runtime.json\" \n",
     "\n",
     "# File Paths (Serial RK - Fine)\n",
-    "ERKFinepDir = f\"nls-exp1/serial-fineP{pStr(1)}/Proc_{pStr(0)}\"\n",
+    "ERKFinepDir = f\"nls-exp{experiment_number}/serial-fine-P{pStr(1)}/Proc_{pStr(0)}\"\n",
     "ERKFineSolFile = f\"{ERKFinepDir}/yend.npy\"\n",
     "ERKFineTimingFile = f\"{ERKFinepDir}/runtime.json\"\n",
     "\n",
     "# File Paths (Serial RK -- Reference)\n",
-    "ERKRefpDir = f\"nls-exp1/serial-refP{pStr(1)}/Proc_{pStr(0)}\"\n",
+    "ERKRefpDir = f\"nls-exp{experiment_number}/serial-ref-P{pStr(1)}/Proc_{pStr(0)}\"\n",
     "ERKRefSolFile = f\"{ERKRefpDir}/yend.npy\"\n",
     "ERKRefTimingFile = f\"{ERKRefpDir}/runtime.json\"\n",
     "\n",
@@ -89,7 +90,7 @@
     "    times_parareal[i] = extractTotalTime(ParTimingFile(ks[i], pTot, pFin))\n",
     "    \n",
     "speedup = time_fine / times_parareal;\n",
-    "savemat('nls-exp1-speedup', {\"speedup\" : speedup});"
+    "savemat(f\"nls-exp{experiment_number}-speedup\", {\"speedup\" : speedup});"
    ]
   },
   {
@@ -100,6 +101,18 @@
    "source": [
     "plt.semilogy(ks, errors_parareal)\n",
     "plt.semilogy(ks, error_fine * np.ones(ks.shape))\n",
+    "plt.title('Error vs Iteration')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(speedup) \n",
+    "plt.title('Speedup')\n",
     "plt.show()"
    ]
   },
@@ -113,6 +126,7 @@
    "source": [
     "plt.plot(ks, times_parareal)\n",
     "plt.plot(ks, time_fine * np.ones(ks.shape))\n",
+    "plt.title(\"Time vs Iteration\")\n",
     "plt.show()"
    ]
   },
@@ -125,6 +139,7 @@
    "outputs": [],
    "source": [
     "plt.plot(np.real(y_ref)) \n",
+    "plt.title('Final Solution')\n",
     "plt.show()"
    ]
   }
