Updated KP Notebook

--- a/Examples/Parareal/ERK/dat/kp-plots.ipynb
+++ b/Examples/Parareal/ERK/dat/kp-plots.ipynb
@@ -9,7 +9,8 @@
     "import json\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
-    "from scipy.io import savemat"
+    "from scipy.io import savemat\n",
+    "from matplotlib import cm"
    ]
   },
   {
@@ -49,12 +50,14 @@
    "outputs": [],
    "source": [
     "# Experiment Parameters\n",
-    "Ngs = np.arange(1,4)\n",
+    "Ngs = np.arange(1,3)\n",
     "ks = np.arange(0,29)\n",
     "pTot = 1\n",
     "pFin = pTot - 1\n",
     "\n",
-    "error_norm = lambda sol, ref : np.linalg.norm(sol.flatten() - ref.flatten(), np.inf) / np.linalg.norm(ref.flatten(), np.inf)"
+    "sol2Realspace = lambda sol : np.real(np.fft.ifft2(sol)) # transform in x and take real part\n",
+    "solNorm = lambda sol : np.linalg.norm(sol2Realspace(sol).flatten()) # flatten and inf norm\n",
+    "errorNorm = lambda sol, ref : solNorm(sol - ref) / solNorm(ref)"
    ]
   },
   {
@@ -71,9 +74,9 @@
     "for j in range(0, Ngs.size):\n",
     "    for i in range(0, ks.size):\n",
     "        y_par = np.load(ParSolFile(Ngs[j],ks[i], pTot, pFin))\n",
-    "        errors_parareal[i,j] = error_norm(y_par, y_ref)\n",
+    "        errors_parareal[i,j] = errorNorm(y_par, y_ref)\n",
     "\n",
-    "error_fine = error_norm(y_fine, y_ref)"
+    "error_fine = errorNorm(y_fine, y_ref)"
    ]
   },
   {
@@ -102,6 +105,7 @@
    "outputs": [],
    "source": [
     "plt.semilogy(ks, errors_parareal)\n",
+    "plt.semilogy(ks[[0, -1]], error_fine * np.array([1, 1]), 'k--')\n",
     "plt.title('Error vs Iteration')\n",
     "plt.show()"
    ]
@@ -126,7 +130,7 @@
    "outputs": [],
    "source": [
     "plt.plot(ks, times_parareal)\n",
-    "plt.plot(ks, time_fine * np.ones(ks.shape))\n",
+    "plt.plot(ks, time_fine * np.ones(ks.shape), 'k--')\n",
     "plt.title(\"Time vs Iteration\")\n",
     "plt.show()"
    ]
@@ -134,15 +138,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(np.real(y_ref)) \n",
-    "plt.title('Final Solution')\n",
-    "plt.show()"
+    "fig, ax = plt.subplots(subplot_kw={\"projection\": \"3d\"})\n",
+    "\n",
+    "X = np.linspace(0, 8*np.pi,y_ref.shape[1])\n",
+    "Y = np.linspace(-8*np.pi, 8*np.pi,y_ref.shape[0])\n",
+    "X, Y = np.meshgrid(X, Y)\n",
+    "\n",
+    "surf = ax.plot_surface(X,Y, sol2Realspace(y_ref), cmap=cm.coolwarm,linewidth=0,rstride=1,cstride=1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
